2003-04-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec): Remove the installed libintl.la if it
	has hardwired pathnames in dependency_libs and the installed package
	shall be relocatable.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.c: Rely on DEPENDS_ON_LIBCHARSET, DEPENDS_ON_LIBICONV,
	DEPENDS_ON_LIBINTL, not on NO_LIBRARIES.
	* Makefile.in (DEFS): Define DEPENDS_ON_LIBICONV, for relocatable.c.
	* Makefile.msvc (CFLAGS): Also define DEPENDS_ON_LIBICONV.

2003-04-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.c (_GNU_SOURCE): Define, to ensure getline() gets
	declared by <stdio.h>.

2003-04-04  Bruno Haible  <bruno@clisp.org>

	* gettextP.h [!_LIBC]: Remove declarations of exported libintl_*
	functions; include libgnuintl.h instead.
	* intl-compat.c: Remove include of libgnuintl.h.
	(DLL_EXPORTED): New macro.
	(gettext, dgettext, dcgettext, ngettext, dngettext, dcngettext,
	textdomain, bindtextdomain, bind_textdomain_codeset): Use it.

2003-04-04  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (libintl_set_relocation_prefix): Convert extern
	declaration to K&R syntax.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.in (DISTFILES.gettext): Add Makefile.vms.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (INCLUDES): Mention the current directory first.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* libgnuintl.h.in: Renamed from libgnuintl.h.
	* Makefile.msvc: New file.
	* README.woe32: New file.
	* Makefile.in (HEADERS): Remove libgnuintl.h, add libgnuintl.h.in.
	(DISTFILES.gettext): Add libgnuintl.h.msvc-shared, README.woe32,
	Makefile.msvc.
	(DISTFILES.obsolete): Add libgnuintl.h.
	(libgnuintl.h): New rule.
	(libintl.h, $(OBJECTS)): Expect libgnuintl.h in builddir, not in
	srcdir.
	(mostlyclean): Also remove libgnuintl.h.
	* dcigettext.c (alloca): Add support for MSVC.
	* loadmsgcat.c (alloca): Likewise.
	* localealias.c (alloca): Likewise.