@@ -1,3 +1,7 @@
+2003-04-12  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.c (get_charset_aliases): Add special case for VMS.
+
 2003-04-10  Bruno Haible  <bruno@clisp.org>
 
 	* findprog.c (find_in_path): Use 'bool' and eaccess().
