@@ -1,3 +1,7 @@
+2003-04-12  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.c (get_charset_aliases): Add special case for VMS.
+
 2003-04-06  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (install-exec): Remove the installed libintl.la if it
